--- a/src/NoteForm.css
+++ b/src/NoteForm.css
@@ -47,3 +47,48 @@
   height: calc(100vh - 140px);
   font-size: 1.3em;
 }
+
+.RichTextEditor__root___2QXK- {
+  border: none;
+}
+
+.EditorToolbar__root___3_Aqz {
+  border: none;
+  position: absolute;
+  top: 2.2rem;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.RichTextEditor__root___2QXK- .public-DraftEditor-content {
+  height: calc(100vh - 120px);
+  margin-left: -21px;
+  margin-right: -21px;
+}
+
+.RichTextEditor__root___2QXK- .public-DraftEditor-content [data-contents="true"] {
+  margin-left: 17px;
+  margin-right: 17px;
+}
+
+/* Dropdown */
+@media screen and (max-width: 726px) {
+  .Dropdown__root___3ALmx {
+    display: none;
+  }
+}
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .Dropdown__root___3ALmx select {
+    border: 0;
+    border-left: 3px solid transparent;
+  }
+}
+.Dropdown__root___3ALmx select {
+  height: 26px;
+  margin: 0;
+  padding: 0;
+}
+.Dropdown__root___3ALmx .Dropdown__value___34Py9 {
+  line-height: 23px;
+  border: 0
+}
